--- a/src/main/resources/wowchat.conf
+++ b/src/main/resources/wowchat.conf
@@ -15,10 +15,24 @@ discord {
     #"lookup *"
   ]
 
-  # List of Discord channels where commands are enabled. If this is unspecified or empty,
-  # ALL channels will have command permissions.
-  enable_commands_channels=[
+  # A list of character names that cannot be used with ?invite 
+  banned_invite_list=[
+    #"name1"
+	  #"name2"
+  ]
 
+  # List of Discord channels where commands are enabled. 
+
+  # if left blank, NO channel with have permissions
+  enable_invite_channels=[
+  ]
+  # if left blank, NO channel with have permissions
+  enable_kick_channels=[
+  ]
+  # if left blank, ALL channels will have permission
+  enable_who_gmotd_channels=[
+    #"example-channel"
+    #"example-channel"
   ]
 
   # If a tag matching fails from Discord when someone @ a non-existent or unmatched person or role,
@@ -30,14 +44,14 @@ discord {
 wow {
   # You MUST keep this as Mac on Warden (anticheat) enabled servers. Windows Warden is not implemented.
   # Only reason to change this is for servers on which Mac login is not working and also which have Warden disabled.
-  platform=Mac
+  platform=Windows
 
   # Whether to treat server's MotD message as a server SYSTEM message.
   enable_server_motd=1
 
-  version=1.12.1
-  realmlist=167.114.128.42
-  realm=The Construct
+  version=3.3.5
+  realmlist=162.19.28.88
+  realm=Area 52 - Free-pick
   account=${?WOW_ACCOUNT}
   password=${?WOW_PASSWORD}
   character=${?WOW_CHARACTER}
@@ -45,10 +59,8 @@ wow {
 # Other example configurations
 
 # version=1.12.1
-# realm_build=7060
-# game_build=5875
-# realmlist=logon.turtle-wow.org
-# realm="Turtle WoW"
+# realmlist=logon.lightshope.org
+# realm=Northdale
 # account=<discord bot account>
 # password=<discord bot password>
 # character=<in game character>
@@ -95,30 +107,35 @@ guild {
   promoted {
     enabled=1
     format="`[%user] has promoted [%target] to [%rank].`"
+    channel="guild-events"
   }
   demoted {
     enabled=1
     format="`[%user] has demoted [%target] to [%rank].`"
+    channel="guild-events"
   }
   joined {
     enabled=1
     format="`[%user] has joined the guild.`"
+    channel="guild-events"
   }
   left {
     enabled=1
     format="`[%user] has left the guild.`"
+    channel="guild-events"
   }
   removed {
     enabled=1
     format="`[%target] has been kicked out of the guild by [%user].`"
   }
   motd {
-    enabled=1
+    enabled=0
     format="`Guild Message of the Day: %message`"
   }
   achievement {
     enabled=1
     format="%user has earned the achievement %achievement!"
+    channel="guild-events"
   }
 }
 
@@ -150,98 +167,83 @@ chat {
     {
       direction=wow_to_discord
       wow {
-        type=Say
+        type=Guild
         format="[%user]: %message"
       }
       discord {
-        channel=guild-chat
+        channel=guild-events
         format="[%user]: %message"
       }
     }
-    {
-      direction=wow_to_discord
-      wow {
-        type=Yell
-        format="[%user]: %message"
-      }
-      discord {
-        channel=guild-chat
-        format="[%user]: %message"
-      }
-    }
-    {
-      direction=wow_to_discord
-      wow {
-        type=Emote
-        format="%user %message"
-      }
-      discord {
-        channel=guild-chat
-        format="%user %message"
-      }
-    }
-    {
-      direction=wow_to_discord
-      wow {
-        type=System
-      }
-      discord {
-        channel=guild-chat
-        format="[SYSTEM]: %message"
-      }
-    }
+    # {
+    #   direction=wow_to_discord
+    #   wow {
+    #     type=Say
+    #     format="[%user]: %message"
+    #   }
+    #   discord {
+    #     channel=guild-chat
+    #     format="[%user]: %message"
+    #   }
+    # }
+    # {
+    #   direction=wow_to_discord
+    #   wow {
+    #     type=Yell
+    #     format="[%user]: %message"
+    #   }
+    #   discord {
+    #     channel=guild-chat
+    #     format="[%user]: %message"
+    #   }
+    # }
+    # {
+    #   direction=wow_to_discord
+    #   wow {
+    #     type=Emote
+    #     format="%user %message"
+    #   }
+    #   discord {
+    #     channel=guild-chat
+    #     format="%user %message"
+    #   }
+    # }
+    # {
+    #   direction=wow_to_discord
+    #   wow {
+    #     type=System
+    #   }
+    #   discord {
+    #     channel=guild-chat
+    #     format="[SYSTEM]: %message"
+    #   }
+    # }
 
     # Custom channels
-    {
-      direction=wow_to_discord
-      wow {
-        type=Channel
-        channel="General - Orgrimmar"
-        format="[%user]: %message"
-      }
-      discord {
-        channel=guild-chat
-        format="[%target] [%user]: %message"
-      }
-    }
-    {
-      direction=wow_to_discord
-      wow {
-        type=Channel
-        channel="Trade - City"
-        format="[%user]: %message"
-      }
-      discord {
-        channel=trade-chat
-        format="[%target] [%user]: %message"
-      }
-    }
-
-    # Class channels
-    {
-      direction=both
-      wow {
-        type=Channel
-        channel=Cast
-        format="[%user]: %message"
-      }
-      discord {
-        channel=mages
-        format="[%user]: %message"
-      }
-    }
-    {
-      direction=both
-      wow {
-        type=Channel
-        channel=Chadwarriors
-        format="[%user]: %message"
-      }
-      discord {
-        channel=warriors
-        format="[%user]: %message"
-      }
-    }
+    # {
+    #   direction=wow_to_discord
+    #   wow {
+    #     type=Channel
+    #     channel="General - Orgrimmar"
+    #     format="[%user]: %message"
+    #   }
+    #   discord {
+    #     channel=guild-chat
+    #     format="[%target] [%user]: %message"
+    #   }
+    # }
+    # {
+    #   direction=wow_to_discord
+    #   wow {
+    #     type=Channel
+    #     channel="Trade - City"
+    #     format="[%user]: %message"
+    #   }
+    #   discord {
+    #     channel=trade-chat
+    #     format="[%target] [%user]: %message"
+    #   }
+    # }
   ]
 }
 
